syntax = "proto3";

package notification;

option go_package = "github.com/tamirat-dejene/ha-soranu/shared/protos/notificationpb;notificationpb";

message Notification {
	string id             = 1;
	string recipient_id   = 2;
	string recipient_type = 3;
	string order_id       = 4;
	string title          = 5;
	string message        = 6;
	bool   is_read        = 7;
	string type           = 8;
	string created_at     = 9;
}

message GetNotificationsRequest {
	string recipient_id   = 1;
	string recipient_type = 2; // "USER" or "RESTAURANT"
}

message GetNotificationsResponse {
	repeated Notification notifications = 1;
}

message MarkAsReadRequest {
	string notification_id = 1;
}

message MarkAsReadResponse {
	bool success = 1;
}

message DeleteNotificationRequest {
    string notification_id = 1;
}

message DeleteNotificationResponse {
    bool success = 1;
}

// Notification Service Definition
service NotificationService {
    // Fetch notifications for a user or restaurant
	rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
    // Mark a notification as read
	rpc MarkAsRead(MarkAsReadRequest) returns (MarkAsReadResponse);
    // Delete a notification
    rpc DeleteNotification(DeleteNotificationRequest) returns (DeleteNotificationResponse);
}
